--- a/GoogleMaps.html
+++ b/GoogleMaps.html
@@ -11,6 +11,9 @@
         <h1>
             Ranking: Top places to visit in Donostia-San Sebastian
         </h1>
+        <p style="color: #085a75;">
+        Save this for future reference: 8 ↑
+        </p>
         <p>
             Well done brainhackers, we didn't think you will go this far... but oh, you are still locked in the basement he he. Such a shame to be in 
             such a beatiful city and be stuck in here. But don't worry, you are in for a treat because now you'll be able to visit three emblematic places
