--- a/Binary.html
+++ b/Binary.html
@@ -12,6 +12,9 @@
     <h1>
         Almost there...
     </h1>
+        <p style="color: #085a75;">
+        Save this for future reference: 9 →
+        </p>
     <p>
 Feels good to do some sightseeing, right? But now back to your computers, this is a BrainHack after all... Do you even remember binary coding? Oh you don't? Don't worry, 
             we are here to refresh your memory he he.   
