--- a/Final.html
+++ b/Final.html
@@ -9,6 +9,9 @@
         <h1>
             Congratulations!
         </h1>
+        <p style="color: #085a75;">
+        Save this for future reference: Find your way to the cerebellum
+        </p>
         <p>
             Wow, unbelievable! You solved all the challenges and therefore, here you are your so longed-for key:
         </p>
