--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
         <p>
             
-            If the answer contains letters, it will be indicated as XXXX; if the answer contains numbers, it will be indicated as - - - -. 
+            If the answer contains letters, it will be indicated as - - - - -; if the answer contains numbers, it will be indicated as X X X X. 
            
         </p>
         <p>     
